[tool.poetry]
name = "pyrsona"
version = "0.5"
description = ""
authors = ["John <johnbullnz@gmail.com>"]
homepage = "https://github.com/johnbullnz/pyrsona"
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
parse = "^1.19.0"
numpy = "^1.22.2"
unsync = "^1.4.0"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-randomly = "^3.11.0"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
