[tool.poetry]
name = "pyrsona"
version = "1.0"
description = ""
authors = ["John <johnbullnz@gmail.com>"]
homepage = "https://github.com/johnbullnz/pyrsona"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
parse = "^1.19.0"
numpy = "^1.22.2"
unsync = "^1.4.0"
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7"
pytest-randomly = ">=3"
pytest-cov = ">=3"
black = ">=24"
ruff = ">=0.5"
pre-commit = ">=3.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.pytest.ini_options]
markers = {slow = "mark test as slow"}
testpaths = [
    "tests",
]
pythonpath = ["examples"]
